# sampquery-c

./: .gitignore  CMakeLists.txt  README.md  main.c  makefile  sampquery.c  sampquery.h
lib/: sampquery.h  sq_header.h  sq_packet.h  sq_request.h
lib/internal/: sq_commom.h  sq_debug.h  sq_net.h
src/: CMakeLists.txt  debug.c  header.c  packet.c  request.c
test/: CMakeLists.txt  main.c
tests/: client  client.c  makefile  server  server.c
